feat: Implementa garantia.
